Prevent edit tab boxes from stretching vertically

--- a/src/containers/Admin/EditTab/DistanceEditor/styles.scss
+++ b/src/containers/Admin/EditTab/DistanceEditor/styles.scss
@@ -11,6 +11,10 @@
         font-weight: 500;
         margin: 0;
         color: var(--tavla-font-color);
+
+        b {
+            font-weight: bold;
+        }
     }
 
     &__input {
