--- a/src/containers/Admin/EditTab/styles.scss
+++ b/src/containers/Admin/EditTab/styles.scss
@@ -9,6 +9,7 @@
     .eds-grid__item {
         background-color: var(--tavla-box-background-color);
         padding: 2rem;
+        height: fit-content;
 
         h2 {
             margin: 0;
